--- a/data/media.toml
+++ b/data/media.toml
@@ -1,5 +1,5 @@
 [[entries]]
-title = "AI Grants"
+title = "AI Grant"
 link = "https://aigrant.org/"
 
 [[entries]]
@@ -9,7 +9,3 @@ link = "https://slimemoldtimemold.com/2022/08/04/effective-illegalism/"
 [[entries]]
 title = "Simulators"
 link = "https://www.lesswrong.com/posts/vJFdjigzmcXMhNTsx/simulators"
-
-[[entries]]
-title = "Movies"
-link = "idk"
