Fixing up some layout stuff

--- a/data/blogroll.toml
+++ b/data/blogroll.toml
@@ -1,13 +1,16 @@
+[[entries]]
+title = "Shtetl Optimized"
+description = "The better of the two famous blogs by people named Scott."
+link = "https://www.scottaaronson.com/blog/"
+
+[[entries]]
+title = "Azimuth"
+link = "https://johncarlosbaez.wordpress.com/"
 
 [[entries]]
 title = "Pirate Wires"
 link = "https://www.piratewires.com/"
 
 [[entries]]
-title = "Nick Arner"
-link = "https://nickarner.com/"
-
-[[entries]]
-title = "Azimuth"
-link = "https://johncarlosbaez.wordpress.com/"
-
+title = "The Bride Stripped"
+link = "https://thebridestripped.substack.com/"
