--- a/data/books.toml
+++ b/data/books.toml
@@ -1,16 +1,16 @@
 [[entries]]
-title = "Termination Shock"
-link = "https://whatever.com"
+title = "Only Forward"
+link = "https://a.co/d/8bNfmBs"
 
 [[entries]]
-title = "The Planet Remade"
-link = "https://whatever.com"
+title = "The Beginning of Infinity"
+link = "https://a.co/d/bWU25BL"
 
 [[entries]]
-title = "Channel One"
-link = "https://whatever.com"
+title = "Manifold: Space"
+link = "https://a.co/d/bPugHqU"
 
 [[entries]]
-title = "high dimensional data analysis with low dimensional models"
-link = "https://whatever.com"
+title = "Probabilistic Robotics"
+link = "https://a.co/d/9U87pb1"
 
